[gd_scene load_steps=21 format=3 uid="uid://diec1tboo47di"]

[ext_resource type="Script" uid="uid://bfcuglt4griht" path="res://inimigo_boss.gd" id="1_qx1bd"]
[ext_resource type="Texture2D" uid="uid://cm42gxvpbevx0" path="res://Assets/Enemys/Robots/3-Robot-Atack.png" id="2_qx1bd"]
[ext_resource type="Texture2D" uid="uid://bmakw40afdt7q" path="res://Assets/Enemys/Robots/3-Robot-Idle.png" id="3_c2kdd"]
[ext_resource type="Texture2D" uid="uid://bxipaasje6djl" path="res://Assets/Enemys/Robots/3-Robot-Walk.png" id="4_iv0px"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0auxs"]
atlas = ExtResource("2_qx1bd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdw50"]
atlas = ExtResource("2_qx1bd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28de0"]
atlas = ExtResource("2_qx1bd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvow5"]
atlas = ExtResource("2_qx1bd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3s81"]
atlas = ExtResource("3_c2kdd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp83q"]
atlas = ExtResource("3_c2kdd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gsu5"]
atlas = ExtResource("3_c2kdd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70lja"]
atlas = ExtResource("3_c2kdd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4j2w"]
atlas = ExtResource("4_iv0px")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_322x6"]
atlas = ExtResource("4_iv0px")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48ln6"]
atlas = ExtResource("4_iv0px")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hasw8"]
atlas = ExtResource("4_iv0px")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wpxc"]
atlas = ExtResource("4_iv0px")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr50t"]
atlas = ExtResource("4_iv0px")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tr50t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0auxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdw50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28de0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28de0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28de0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvow5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0auxs")
}],
"loop": false,
"name": &"atack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3s81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp83q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gsu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70lja")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4j2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_322x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48ln6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hasw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wpxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr50t")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4ymu"]
size = Vector2(276, 241)

[node name="Inimigo Boss" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_qx1bd")
"dist√¢ncia" = 100.0
velocidade = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(9.1875, 9.187499)
sprite_frames = SubResource("SpriteFrames_tr50t")
animation = &"atack"
autoplay = "default"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, 27.5)
shape = SubResource("RectangleShape2D_r4ymu")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
